The discord bot and openai api keys changed.

--- a/app/.env
+++ b/app/.env
@@ -1,2 +1,2 @@
-DISCORD_TOKEN=MTA5MDk5NDI2MTM2Mjc0OTYxMQ.GfWtzo.PGeAkNdsxS_KYZsmj8njo2JMWyw1BK9owr7fIQ
-CHATGPT_API_KEY=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
+DISCORD_TOKEN=
+CHATGPT_API_KEY=
